jdk8 parity